# model_agency_bot3

./: .env  README.md  check_config.py  pyproject.toml  requirements.txt
app/: main.py
app/application/dto/: order_dto.py
app/application/services/: booking_service.py
app/core/: config.py
app/domain/entities/: order.py
app/infrastructure/database/models/: city.py  model.py  order.py  payment.py  user.py
app/infrastructure/database/repositories/: city_repo.py  model_repo.py
app/presentation/bot/dialogs/: booking_dialog.py
app/presentation/bot/handlers/: start.py
app/presentation/bot/middlewares/: edit_mode.py
