[project]
name = "model-agency-bot3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram-dialog==2.1.0",
    "aiohttp==3.9.5",
    "aioredis==2.0.1",
    "alembic==1.14.1",
    "cryptolib>=0.0.2",
    "redis==5.0.1",
    "sqlalchemy[asyncio]==2.0.36",
]
